-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.1, 5.10.1
-
Linux Debian 7.2, cups 1.5.3
-
84cc8d0badb4abc3c9a96d59c61dddce916a216c
Install printers without and with PPD files. Make sure that cups doesn't use tmp PPD file by example attached. Print to printer without PPD file and see that Qt prints to printer with PPD.
| For Gerrit Dashboard: QTBUG-44991 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 110893,3 | Add debug operator for QPrinterInfo. | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 110968,1 | WIP: CUPS: Add generic PPD file. | 5.5 | qt/qtbase | Status: DEFERRED | -2 | 0 |
| 110997,3 | Clean up API of QPlatformPrintDevice (QPA). | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |